--- a/maquettefoadvincent.html
+++ b/maquettefoadvincent.html
@@ -4,19 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="./assets/js/script.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Maquette Portfolio Vincent</title>
 </head>
 <body>
     <header>
+        <div class="bigMount" id="bigMount">
+            <div class="croix" id="croix">
+                <img src="./assets/images/icones/90-905672_x-cross-close-symbol-icon-button-gui-close.png" alt="">
+            </div>
+            <div class="centre">
+                <img src="./assets/images/p1.jpg" alt="">
+                <p>My beloved mountains</p>
+            </div>
+        </div>
         <div class="logos">
+            <div class="cached" id="cached">
+                <img src="./assets/images/p1.jpg" id="hiddenMount" alt="mount">
+                <img src="./assets/images/p2.jpg" id="hiddenCoffee" alt="coffee">
+                <img src="./assets/images/p3.jpg" id="hiddenBear" alt="bear">
+                <img src="./assets/images/p4.jpg" id="hiddenSea" alt="sea">
+            
+                <img src="./assets/images/p5.jpg" id="hiddenForest" alt="forest">
+                <img src="./assets/images/p6.jpg" id="hiddenWrite" alt="write">
+                <img src="./assets/images/p7.jpg" id="hiddenTrain" alt="train">
+                <img src="./assets/images/p8.jpg" id="hiddenBoat" alt="boat">
+            </div>
         <div class="entete">
             <nav class="nav1">
                 <a class="liengauche" href="https://www.google.fr">HOME</a>
-                <a class="liengauche" href="https://www.google.fr"><img src="icones/8666609_user_icon.png" alt="bonhomme">ABOUT</a>
-                <a class="liengauche" href="https://www.google.fr"><img src="icones/8666762_grid_shape_icon.png" alt="dossier">PORTFOLIO</a>
-                <a class="liengauche" href="https://www.google.fr"><img src="icones/8666723_mail_icon.png" alt="lettre">CONTACT</a>
-                <a class="liendroite" href="https://www.google.fr"><img src="icones/8666693_search_icon.png" alt="loupe"></a>               
+                <a class="liengauche" href="https://www.google.fr"><img src="./assets/images/icones/8666609_user_icon.png" alt="bonhomme">ABOUT</a>
+                <div class="liengauche" id="porofolio" href="https://www.google.fr"><img src="./assets/images/icones/8666762_grid_shape_icon.png" alt="dossier">PORTFOLIO</div>
+                <a class="liengauche" href="https://www.google.fr"><img src="./assets/images/icones/8666723_mail_icon.png" alt="lettre">CONTACT</a>
+                <a class="liendroite" href="https://www.google.fr"><img src="./assets/images/icones/8666693_search_icon.png" alt="loupe"></a>               
             </nav>
         </div class="mywebsite">
             <p class="website">MY WEBSITE LOGO</p>
@@ -32,30 +53,30 @@
         <div class="lien2">
             <nav class="nav2">
                 <a class="liengauchebas" href="https://www.google.fr">HOME</a>
-                <a class="liengauchebas" href="https://www.google.fr"><img src="icones/8666609_user_icon.png" alt="bonhomme">ABOUT</a>
-                <a class="liengauchebas" href="https://www.google.fr"><img src="icones/8666762_grid_shape_icon.png" alt="dossier">PORTFOLIO</a>
-                <a class="liengauchebas" href="https://www.google.fr"><img src="icones/8666723_mail_icon.png" alt="lettre">CONTACT</a>
-                <a class="liendroitebas" href="https://www.google.fr"><img src="icones/8666693_search_icon.png" alt="loupe"></a>
+                <a class="liengauchebas" href="https://www.google.fr"><img src="./assets/images/icones/8666609_user_icon.png" alt="bonhomme">ABOUT</a>
+                <a class="liengauchebas" href="https://www.google.fr"><img src="./assets/images/icones/8666762_grid_shape_icon.png" alt="dossier">PORTFOLIO</a>
+                <a class="liengauchebas" href="https://www.google.fr"><img src="./assets/images/icones/8666723_mail_icon.png" alt="lettre">CONTACT</a>
+                <a class="liendroitebas" href="https://www.google.fr"><img src="./assets/images/icones/8666693_search_icon.png" alt="loupe"></a>
             </nav>
         </div>
         <div class="myname">
             <div class="moi">
-                <p><img src="icones/8666609_user_icon.png" alt="bonhomme"><strong>My Name</strong></p>
-                <img src="images/avatar_hat.jpg" alt="chapeau">
+                <p><img src="./assets/images/icones/8666609_user_icon.png" alt="bonhomme"><strong>My Name</strong></p>
+                <img src="./assets/images/avatar_hat.jpg" alt="chapeau">
             </div>
             <p class="Welcome">Welcome to my website. I am Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati possimus earum inventore repudiandae laboriosam dicta dignissimos eligendi optio quidem impedit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo exercitationem adipisci cum sed, corporis vitae. Sit repudiandae error veniam dolorum, nesciunt velit molestias numquam rem voluptas aperiam aliquid dignissimos quisquam!</p>
         </div>
         <div class="prettygood">
             <h4>I'm really good at:</h4>
-            <p><img src="icones/8666672_camera_icon.png" alt="photo"> Photography</p>
+            <p><img src="./assets/images/icones/8666672_camera_icon.png" alt="photo"> Photography</p>
             <div class="neufun">
                 <div class="neuf"><span>90%</span></div><hr class="un">
             </div>
-            <p><img src="icones/8666614_monitor_icon.png" alt="pc">Web Design</p>
+            <p><img src="./assets/images/icones/8666614_monitor_icon.png" alt="pc">Web Design</p>
             <div class="huitdeux">
                 <div class="huit"><span>85%</span></div><hr class="deux">
             </div>
-            <p><img src="icones/8666659_image_icon.png" alt="img">Photoshop</p>
+            <p><img src="./assets/images/icones/8666659_image_icon.png" alt="img">Photop</p>
             <div class="septtrois">
                 <div class="sept"><span>75%</span></div><hr class="trois">
             </div>
@@ -86,15 +107,15 @@
             <p><em>Here are some of my latest lorem work ipsum tipsum.</em></p>
             <p class="Click"><em>Click on the images to make them bigger</em></p>
             <div class="lesimages">
-                <a href="images/p1.jpg" target="_blank"><img src="images/p1.jpg" alt="mount"></a>
-                <a href="images/p2.jpg" target="_blank"><img src="images/p2.jpg" alt="coffee"></a>
-                <a href="images/p3.jpg" target="_blank"><img src="images/p3.jpg" alt="bear"></a>
-                <a href="images/p4.jpg" target="_blank"><img src="images/p4.jpg" alt="sea"></a>
+                <a href="./assets/images/p1.jpg" target="_blank"><img src="./assets/images/p1.jpg" alt="mount"></a>
+                <a href="./assets/images/p2.jpg" target="_blank"><img src="./assets/images/p2.jpg" alt="coffee"></a>
+                <a href="./assets/images/p3.jpg" target="_blank"><img src="./assets/images/p3.jpg" alt="bear"></a>
+                <a href="./assets/images/p4.jpg" target="_blank"><img src="./assets/images/p4.jpg" alt="sea"></a>
             
-                <a href="images/p5.jpg" target="_blank"><img src="images/p5.jpg" alt="forest"></a>
-                <a href="images/p6.jpg" target="_blank"><img src="images/p6.jpg" alt="write"></a>
-                <a href="images/p7.jpg" target="_blank"><img src="images/p7.jpg" alt="train"></a>
-                <a href="images/p8.jpg" target="_blank"><img src="images/p8.jpg" alt="boat"></a>
+                <a href="./assets/images/p5.jpg" target="_blank"><img src="./assets/images/p5.jpg" alt="forest"></a>
+                <a href="./assets/images/p6.jpg" target="_blank"><img src="./assets/images/p6.jpg" alt="write"></a>
+                <a href="./assets/images/p7.jpg" target="_blank"><img src="./assets/images/p7.jpg" alt="train"></a>
+                <a href="./assets/images/p8.jpg" target="_blank"><img src="./assets/images/p8.jpg" alt="boat"></a>
             </div>
             <p class="load"><a href="https://www.google.fr">LOAD MORE</a></p>
         </div>
@@ -107,12 +128,12 @@
             <p><em>I'd love your feedback!</em></p>
         </div>
         <div class="adresse">
-            <img class=map src="img+/map.jpg" alt="carte de l'autre jour">
+            <img class=map src="./assets/images/img+/map.jpg" alt="carte de l'autre jour">
             <div class="Chicago">
-                <p><img class="icone" src="icones/8666640_map_pin_icon.png" alt="pin">Chicago, US</p>
-                <p><img class="icone" src="icones/8666632_phone_icon.png" alt="tel">Phone: +00 151515</p>
-                <p><img class="icone" src="icones/8666723_mail_icon.png" alt="mail">Email: mail@mail.com</p>
-                <p>Swing by for a cup of <img class="coffee" src="icones/8666811_coffee_drink_icon.png" alt="café">, or leave me a note:</p>
+                <p><img class="icone" src="./assets/images/icones/8666640_map_pin_icon.png" alt="pin">Chicago, US</p>
+                <p><img class="icone" src="./assets/images/icones/8666632_phone_icon.png" alt="tel">Phone: +00 151515</p>
+                <p><img class="icone" src="./assets/images/icones/8666723_mail_icon.png" alt="mail">Email: mail@mail.com</p>
+                <p>Swing by for a cup of <img class="coffee" src="./assets/images/icones/8666811_coffee_drink_icon.png" alt="café">, or leave me a note:</p>
             </div>
         </div>
         <div class="formulaire">
@@ -120,19 +141,19 @@
         </div>
         <div class="messagerie">
             <textarea name="Message" class="msg" cols="50" rows="1" placeholder="Message"></textarea>
-            <a href=""><img src="icones/8666611_send_icon.png" alt="send">SEND MESSAGE</a>
+            <a href=""><img src="./assets/images/icones/8666611_send_icon.png" alt="send">SEND MESSAGE</a>
         </div>
     </section>
 
     <footer>
-        <button class="top"><img src="icones/8666669_arrow_up_icon.png" alt="up">To the top</button>
+        <button class="top"><img src="./assets/images/icones/8666669_arrow_up_icon.png" alt="up">To the top</button>
         <div class="reseaux">
-            <a href="https://www.facebook.com" target="_blank"><img src="icones/8666797_facebook_social_icon.png" alt="fb"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="icones/8666638_instagram_icon.png" alt="insta"></a>
-            <a href="https://www.snapchat.com" target="_blank"><img src="icones/5279119_ghost_snapchat_snap_snapchat logo_icon.png" alt="snap"></a>
-            <a href="https://www.pinterest.com" target="_blank"><img src="icones/104469_pinterest_icon.png" alt="pinterest"></a>
-            <a href="https://www.twitter.com" target="_blank"><img src="icones/8666812_twitter_social_icon.png" alt="twitter"></a>
-            <a href="https://www.linkedin.com" target="_blank"><img src="icones/8666770_linkedin_social_icon.png" alt="linkedin"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="./assets/images/icones/8666797_facebook_social_icon.png" alt="fb"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="./assets/images/icones/8666638_instagram_icon.png" alt="insta"></a>
+            <a href="https://www.snapchat.com" target="_blank"><img src="./assets/images/icones/5279119_ghost_snapchat_snap_snapchat logo_icon.png" alt="snap"></a>
+            <a href="https://www.pinterest.com" target="_blank"><img src="./assets/images/icones/104469_pinterest_icon.png" alt="pinterest"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="./assets/images/icones/8666812_twitter_social_icon.png" alt="twitter"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img src="./assets/images/icones/8666770_linkedin_social_icon.png" alt="linkedin"></a>
         </div>
         <p>Powered by Power</p>
     </footer>
